# Building-and-Evaluating-Advanced-RAG-Applications

./: .gitignore  L1-Advanced_RAG_Pipeline.ipynb  L3-Sentence_window_retrieval.ipynb  README.md  generated_questions.text  pyproject.toml  utils.py
notebooks/: L3-Sentence_window_retrieval.ipynb
